tinyc/test/bad/ptr-to-void-diff.c
int main()
{
    void *p, *y;
    p - y;
    return 0;
}
